# pyatom

./: .gitignore  README.md  pyproject.toml  setup.cfg
data/: bios.txt  config.json  example.config.json  names_first_female.txt  names_first_male.txt  proxy.txt  test_config.json  ua.txt
pyatom/: __init__.py  __version__.py  cfg.py  config.py
pyatom/api/: __init__.py  captcha.py  fake.py  metric.py  smartproxy.py  stock.py
pyatom/app/: downloader.py  geo.py  markov.py  notify.py  pinger.py
pyatom/base/: __init__.py  chars.py  debug.py  img.py  io.py  log.py  orm.py  parser.py  proxy.py  structure.py  timer.py  utils.py
pyatom/client/: chrome.py  http.py  imap.py  req.py  smtp.py
pyatom/ext/: __init__.py  cache.py
pyatom/nlp/: __init__.py  ace.py  spinner.py
tests/: test_proxy.py
